# pipxMinimalExample

./: README.md  pyproject.toml
pipx_minimal_example/: main.py
