[tool.poetry]
name = "pipx-minimal-example"
version = "0.1.0"
description = ""
authors = ["skarfie123 <rahulpai@rocketmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pxme = "pipx_minimal_example.main:main"
